[package]
name = "bindb"
version = "0.0.3"
authors = ["Michal Hornicky <mhornick@redhat.com>"]
edition = "2018"
description = "Simple typed key-value database using sled and bincode"
repository = "https://github.com/semtexzv/rpmtools.git"
homepage = "https://github.com/semtexzv/rpmtools.git"
documentation = "https://docs.rs/bindb"
keywords = ["key-value", "database", "repository", "bincode"]
license = "MIT"

[dependencies.sled]
version = "0.34.4"
default-features = false
features = []


[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.bincode]
version = "1.3.1"
features = []

[dependencies.bytekey]
package = "bytekey-fix"
version = "0.5.1"


[dependencies]
field-ref = "0.2.1"
impl-trait-for-tuples = "0.2.1"
rayon = "1.5.0"
heed = { version = "0.11.0", default-features= false, features = ["serde-json", "serde-bincode", "mdbx"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }