[package]
name = "rpmrepo"
version = "0.0.2"
authors = ["Michal Hornicky <mhornick@redhat.com>"]
edition = "2018"
description = "Crate containing definitions for parsing yum repositry data structures"
repository = "https://github.com/semtexzv/rpmtools.git"
homepage = "https://github.com/semtexzv/rpmtools.git"
documentation = "https://docs.rs/rpmrepo"
keywords = ["yum", "rpm", "repository"]
categories = ["parsing"]
license = "MIT"

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies.xml]
package = "quick-xml"
version = "0.17.1"
default-features = false
features = ["serialize"]

[dependencies]